Add service pricing details and popular services to localization files
- Updated English (en.json), Georgian (ka.json), and Russian (ru.json) localization files to include service pricing information and popular services.
- Added detailed pricing for various car services including diagnostics, maintenance, engine repair, suspension repair, transmission repair, brake system repair, electrical services, and bodywork.
- Included notes on standard rates and the nature of pricing (negotiable, per hour, etc.).

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -88,5 +88,87 @@
   "seo_description": "Reliable car service in Batumi. Professional diagnostics, chassis repair, engine overhaul, auto electrician. Spare parts sales and ordering, heater repair. Quality guarantee.",
   "seo_keywords": "car service Batumi, auto repair Batumi, diagnostics Batumi, chassis repair Batumi, engine repair Batumi, auto electrician Batumi, heater repair Batumi, car parts Batumi, oil change Batumi",
   "heater_repair": "Heater Repair",
-  "lang": "en"
-} 
+  "lang": "en",
+  "price_title": "Service Prices",
+  "price_note": "Standard rate: <b>50 GEL/hour</b>. Final cost depends on the car.",
+  "popular_services": "⭐ Popular Services",
+  "show_full_price_list": "Show full price list ▼",
+  "cat_diagnostics_inspection": "Diagnostics and Inspection",
+  "price_complex_diagnostics": "Complex diagnostics (Chassis + Computer + Inspection)",
+  "price_chassis_diagnostics": "Chassis diagnostics (Lift inspection)",
+  "price_computer_diagnostics": "Computer diagnostics (Reading and resetting errors)",
+  "price_computer_diagnostics_basic": "Computer diagnostics (Basic)",
+  "price_oil_change_engine": "Engine oil and filter change",
+  "price_brake_discs_pads": "Brake discs and pads replacement (per axle)",
+  "price_stabilizer_links": "Stabilizer links replacement (pair)",
+  "price_spark_plugs_4cyl": "Spark plugs replacement (4-cyl engine)",
+  "price_atf_change_partial": "Automatic transmission fluid change (partial)",
+  "price_diagnostics_deep": "In-depth diagnostics and troubleshooting",
+  "price_cooling_system_diagnostics": "Cooling system diagnostics (leaks, CO2)",
+  "price_compression_test": "Compression test",
+  "price_onsite_diagnostics": "On-site diagnostics",
+  "price_value_spark_plugs_plus": "Spark plugs repl. + 10 ₾/cyl",
+  "cat_maintenance": "Maintenance",
+  "price_air_filter": "Air filter replacement",
+  "price_cabin_filter": "Cabin filter replacement",
+  "price_fuel_filter": "Fuel filter replacement",
+  "price_mt_diff_oil": "Manual transmission / Differential oil change",
+  "price_transfer_case_oil": "Transfer case oil change",
+  "price_antifreeze": "Antifreeze replacement",
+  "price_brake_fluid": "Brake fluid replacement",
+  "price_power_steering_fluid": "Power steering fluid replacement",
+  "price_throttle_body_cleaning": "Throttle body cleaning (with adaptation)",
+  "price_radiator_cleaning": "Radiator cleaning (with removal)",
+  "cat_engine_repair": "Engine Repair",
+  "price_timing_belt": "Timing belt replacement",
+  "price_timing_chain": "Timing chain replacement",
+  "price_cylinder_head_4cyl": "Cylinder head removal/installation (4-cyl)",
+  "price_engine_swap": "Engine removal/installation",
+  "price_turbo_swap": "Turbocharger removal/installation",
+  "price_turbo_rebuild": "Turbocharger rebuild (removed)",
+  "price_engine_overhaul": "Engine overhaul / defect detection",
+  "price_valve_cover_gasket": "Valve cover gasket replacement",
+  "price_engine_mounts": "Engine mounts replacement",
+  "price_water_pump": "Water pump replacement",
+  "price_drive_belt": "Drive belt replacement",
+  "price_radiator_swap": "Radiator replacement",
+  "price_thermostat": "Thermostat replacement",
+  "cat_suspension_repair": "Suspension and Chassis Repair",
+  "price_shock_absorbers": "Shock absorbers / struts replacement (pc.)",
+  "price_suspension_arm": "Suspension arm replacement (pc.)",
+  "price_steering_rack": "Steering rack replacement",
+  "price_steering_rod": "Tie rod and end replacement (side)",
+  "price_ball_joint": "Ball joint replacement",
+  "price_bushing_press": "Bushing pressing (on removed arm)",
+  "price_wheel_bearing": "Wheel bearing / hub replacement",
+  "price_cv_joint": "CV joint replacement",
+  "price_drive_shaft": "Drive shaft removal/installation",
+  "price_driveshaft_prop": "Propeller shaft removal/installation",
+  "price_alignment": "Wheel alignment",
+  "cat_transmission_repair": "Transmission Repair",
+  "price_clutch_mt": "Clutch replacement (Manual)",
+  "price_transmission_swap": "Auto transmission/CVT removal/installation",
+  "cat_brake_system": "Brake System Repair",
+  "price_brake_pads_only": "Brake pads replacement (pads only)",
+  "price_caliper_guide_cleaning": "Caliper guide cleaning (during replacement)",
+  "price_caliper_rebuild": "Caliper rebuild (1 piston)",
+  "price_handbrake_shoes": "Handbrake shoes replacement (drum)",
+  "price_value_per_wheel": "/wheel",
+  "cat_electric": "Electric and Electronics",
+  "price_battery_swap": "Battery replacement",
+  "price_alternator_starter": "Alternator / Starter replacement",
+  "price_sensors": "Sensors replacement",
+  "price_bulbs": "Bulbs replacement",
+  "price_wiring_repair": "Wiring repair",
+  "price_extra_equipment": "Additional equipment installation",
+  "price_value_per_hour": "/hour",
+  "cat_body_interior": "Body, Interior and Others",
+  "price_windshield": "Windshield replacement",
+  "price_heater_core": "Heater core replacement",
+  "price_bumper": "Bumper removal/installation",
+  "price_cabin_leak": "Cabin leak search and repair",
+  "price_interior_assembly": "Interior element disassembly/assembly",
+  "price_metal_works": "Locksmith and welding works",
+  "price_value_negotiable": "Negotiable",
+  "price_value_from": "from"
+}
