--- a/src/locales/ka.json
+++ b/src/locales/ka.json
@@ -87,5 +87,87 @@
   "seo_description": "სანდო ავტოსერვისი ბათუმში. პროფესიონალური დიაგნოსტიკა, სავალი ნაწილის შეკეთება, ძრავის კაპიტალური შეკეთება, ავტოელექტრიკოსი. ნაწილების გაყიდვა და შეკვეთა, ღუმელის შეკეთება. ხარისხის გარანტია.",
   "seo_keywords": "ავტოსერვისი ბათუმი, მანქანის შეკეთება ბათუმი, დიაგნოსტიკა ბათუმი, სავალი ნაწილის შეკეთება ბათუმი, ძრავის შეკეთება ბათუმი, ავტოელექტრიკოსი ბათუმი, ღუმელის შეკეთება ბათუმი, ავტონაწილები ბათუმი, ზეთის შეცვლა ბათუმი",
   "heater_repair": "ღუმელის შეკეთება",
-  "lang": "ka"
-} 
+  "lang": "ka",
+  "price_title": "მომსახურების ფასები",
+  "price_note": "სტანდარტული განაკვეთი: <b>50 ლარი/საათში</b>. საბოლოო ღირებულება დამოკიდებულია მანქანაზე.",
+  "popular_services": "⭐ პოპულარული სერვისები",
+  "show_full_price_list": "სრული ფასების ნახვა ▼",
+  "cat_diagnostics_inspection": "დიაგნოსტიკა და დათვალიერება",
+  "price_complex_diagnostics": "კომპლექსური დიაგნოსტიკა (სავალი ნაწილი + კომპიუტერი + დათვალიერება)",
+  "price_chassis_diagnostics": "სავალი ნაწილის დიაგნოსტიკა (დათვალიერება ამწეზე)",
+  "price_computer_diagnostics": "კომპიუტერული დიაგნოსტიკა (შეცდომების წაკითხვა და განულება)",
+  "price_computer_diagnostics_basic": "კომპიუტერული დიაგნოსტიკა (საბაზისო)",
+  "price_oil_change_engine": "ძრავში ზეთის და ფილტრის შეცვლა",
+  "price_brake_discs_pads": "სამუხრუჭე დისკების და ხუნდების შეცვლა (1 ღერძზე)",
+  "price_stabilizer_links": "სტაბილიზატორის სტერჟნების შეცვლა (წყვილი)",
+  "price_spark_plugs_4cyl": "ანთების სანთლების შეცვლა (4-ცილ. ძრავა)",
+  "price_atf_change_partial": "ზეთის შეცვლა ავტომატურ კოლოფში/CVT (ნაწილობრივი)",
+  "price_diagnostics_deep": "სიღრმისეული დიაგნოსტიკა და გაუმართაობის ძიება",
+  "price_cooling_system_diagnostics": "გაგრილების სისტემის დიაგნოსტიკა (გაჟონვაზე, CO2)",
+  "price_compression_test": "კომპრესიის გაზომვა",
+  "price_onsite_diagnostics": "გასვლითი დიაგნოსტიკა",
+  "price_value_spark_plugs_plus": "სანთლების შეცვლა + 10 ₾/ცილ",
+  "cat_maintenance": "ტექნიკური მომსახურება (ტო)",
+  "price_air_filter": "ჰაერის ფილტრის შეცვლა",
+  "price_cabin_filter": "სალონის ფილტრის შეცვლა",
+  "price_fuel_filter": "საწვავის ფილტრის შეცვლა",
+  "price_mt_diff_oil": "ზეთის შეცვლა მექანიკურ კოლოფში / რედუქტორში",
+  "price_transfer_case_oil": "ზეთის შეცვლა რაზდატკაში",
+  "price_antifreeze": "ანტიფრიზის შეცვლა",
+  "price_brake_fluid": "სამუხრუჭე სითხის შეცვლა",
+  "price_power_steering_fluid": "ჰიდრავლიკის სითხის შეცვლა",
+  "price_throttle_body_cleaning": "დროსელის გაწმენდა (ადაპტაციით)",
+  "price_radiator_cleaning": "რადიატორების გარეცხვა (მოხსნით)",
+  "cat_engine_repair": "ძრავის და დამხმარე მოწყობილობების შეკეთება",
+  "price_timing_belt": "ГРМ ქამრის შეცვლა",
+  "price_timing_chain": "ГРМ ჯაჭვის შეცვლა",
+  "price_cylinder_head_4cyl": "ცილინდრების ბლოკის თავის (ГБЦ) მოხსნა/დაყენება (4-ცილ)",
+  "price_engine_swap": "ძრავის მოხსნა/დაყენება",
+  "price_turbo_swap": "ტურბინის მოხსნა/დაყენება",
+  "price_turbo_rebuild": "ტურბინის აღდგენა (მოხსნილზე)",
+  "price_engine_overhaul": "ძრავის კაპიტალური რემონტი / დეფექტოვკა",
+  "price_valve_cover_gasket": "სარქველების თავსახურის პრაკლადკის შეცვლა",
+  "price_engine_mounts": "ძრავის ბალიშების შეცვლა",
+  "price_water_pump": "წყლის ტუმბოს (პომპის) შეცვლა",
+  "price_drive_belt": "ამძრავი ღვედის შეცვლა",
+  "price_radiator_swap": "გაგრილების რადიატორის შეცვლა",
+  "price_thermostat": "თერმოსტატის შეცვლა",
+  "cat_suspension_repair": "სავალი ნაწილის შეკეთება",
+  "price_shock_absorbers": "ამორტიზატორების შეცვლა (ცალი)",
+  "price_suspension_arm": "სავალი ნაწილის ბერკეტის (გიტარის) შეცვლა (ცალი)",
+  "price_steering_rack": "საჭის რეიკის შეცვლა",
+  "price_steering_rod": "საჭის წევის და ნაკონეჩნიკის შეცვლა (მხარე)",
+  "price_ball_joint": "შარავოის შეცვლა",
+  "price_bushing_press": "საილენტბლოკის გადაპრესვა (მოხსნილ ბერკეტზე)",
+  "price_wheel_bearing": "სტუპიცის საკისრის / სტუპიცის შეცვლა",
+  "price_cv_joint": "ყუმბარის (შრუსის) შეცვლა",
+  "price_drive_shaft": "ამძრავი ლილვის (პრივოდის) მოხსნა/დაყენება",
+  "price_driveshaft_prop": "კარდანის ლილვის მოხსნა/დაყენება",
+  "price_alignment": "თვლების შეყრა (რაზვალი)",
+  "cat_transmission_repair": "ტრანსმისიის შეკეთება",
+  "price_clutch_mt": "გადაბმულობის (ცეპლენიის) შეცვლა (მექანიკა)",
+  "price_transmission_swap": "ავტომატური კოლოფის/CVT მოხსნა/დაყენება",
+  "cat_brake_system": "სამუხრუჭე სისტემის შეკეთება",
+  "price_brake_pads_only": "სამუხრუჭე ხუნდების შეცვლა (დისკების გარეშე)",
+  "price_caliper_guide_cleaning": "სუპორტის მიმმართველების გაწმენდა (შეცვლისას)",
+  "price_caliper_rebuild": "სუპორტის აღდგენა (1 დგუში)",
+  "price_handbrake_shoes": "ხელის მუხრუჭის ხუნდების შეცვლა (დოლურა)",
+  "price_value_per_wheel": "/ბორბალი",
+  "cat_electric": "ელექტრიკა და ელექტრონიკა",
+  "price_battery_swap": "აკუმულატორის შეცვლა",
+  "price_alternator_starter": "გენერატორის / სტარტერის შეცვლა",
+  "price_sensors": "სენსორების (დაჩიკების) შეცვლა",
+  "price_bulbs": "ნათურების შეცვლა",
+  "price_wiring_repair": "ელექტროგაყვანილობის შეკეთება",
+  "price_extra_equipment": "დამატებითი აღჭურვილობის დაყენება",
+  "price_value_per_hour": "/საათი",
+  "cat_body_interior": "ძარა, სალონი და სხვა",
+  "price_windshield": "საქარე მინის შეცვლა",
+  "price_heater_core": "ღუმელის (ფეჩის) რადიატორის შეცვლა",
+  "price_bumper": "ბამპერის მოხსნა/დაყენება",
+  "price_cabin_leak": "სალონში წყლის ჩასვლის ძიება და აღმოფხვრა",
+  "price_interior_assembly": "სალონის ელემენტების დაშლა/აწყობა",
+  "price_metal_works": "ზეინკალური და სადუღებო სამუშაოები",
+  "price_value_negotiable": "შეთანხმებით",
+  "price_value_from": "დან"
+}
