--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -88,5 +88,87 @@
   "seo_description": "Надежный автосервис в Батуми. Профессиональная диагностика, ремонт ходовой части, капитальный ремонт двигателя, автоэлектрик. Продажа и подбор запчастей, ремонт печки. Гарантия.",
   "seo_keywords": "автосервис Батуми, СТО Батуми, ремонт авто Батуми, диагностика авто Батуми, ремонт ходовой части Батуми, ремонт двигателя Батуми, автоэлектрик Батуми, ремонт печки Батуми, автозапчасти Батуми, замена масла Батуми",
   "heater_repair": "Ремонт печки",
-  "lang": "ru"
+  "lang": "ru",
+  "price_title": "Цены на услуги",
+  "price_note": "Стандартная ставка: <b>50 лари/час</b>. Итоговая стоимость зависит от авто.",
+  "popular_services": "⭐ Самые популярные услуги",
+  "show_full_price_list": "Показать полный прайс-лист ▼",
+  "cat_diagnostics_inspection": "Диагностика и Осмотр",
+  "price_complex_diagnostics": "Комплексная диагностика (Ходовая + Компьютерная + Осмотр)",
+  "price_chassis_diagnostics": "Диагностика ходовой части (Осмотр на подъемнике)",
+  "price_computer_diagnostics": "Компьютерная диагностика (Считывание и сброс ошибок)",
+  "price_computer_diagnostics_basic": "Компьютерная диагностика (базовая)",
+  "price_oil_change_engine": "Замена масла и масляного фильтра в ДВС",
+  "price_brake_discs_pads": "Замена тормозных дисков и колодок (за 1 ось)",
+  "price_stabilizer_links": "Замена стоек стабилизатора (за пару)",
+  "price_spark_plugs_4cyl": "Замена свечей зажигания (4-цил. ДВС)",
+  "price_atf_change_partial": "Замена масла в АКПП/CVT (частичная)",
+  "price_diagnostics_deep": "Диагностика и поиск неисправности (углубленная)",
+  "price_cooling_system_diagnostics": "Диагностика системы охлаждения (на утечки, CO2)",
+  "price_compression_test": "Замер компрессии",
+  "price_onsite_diagnostics": "Выездная диагностика",
+  "price_value_spark_plugs_plus": "Замена свечей + 10 ₾/цил",
+  "cat_maintenance": "Техническое обслуживание (ТО)",
+  "price_air_filter": "Замена воздушного фильтра",
+  "price_cabin_filter": "Замена салонного фильтра",
+  "price_fuel_filter": "Замена топливного фильтра",
+  "price_mt_diff_oil": "Замена масла в МКПП / редукторе",
+  "price_transfer_case_oil": "Замена масла в раздатке",
+  "price_antifreeze": "Замена антифриза",
+  "price_brake_fluid": "Замена тормозной жидкости",
+  "price_power_steering_fluid": "Замена жидкости ГУР",
+  "price_throttle_body_cleaning": "Очистка дроссельной заслонки (с адаптацией)",
+  "price_radiator_cleaning": "Промывка радиаторов (со снятием)",
+  "cat_engine_repair": "Ремонт двигателя и навесного оборудования",
+  "price_timing_belt": "Замена ремня ГРМ",
+  "price_timing_chain": "Замена цепи ГРМ",
+  "price_cylinder_head_4cyl": "Снятие/установка ГБЦ (4-цил)",
+  "price_engine_swap": "Снятие/установка ДВС в сборе",
+  "price_turbo_swap": "Снятие/установка турбины",
+  "price_turbo_rebuild": "Переборка турбины (на снятом)",
+  "price_engine_overhaul": "Капитальный ремонт / дефектовка ДВС",
+  "price_valve_cover_gasket": "Замена прокладки клапанной крышки",
+  "price_engine_mounts": "Замена опор/подушек двигателя",
+  "price_water_pump": "Замена помпы (водяного насоса)",
+  "price_drive_belt": "Замена приводного ремня",
+  "price_radiator_swap": "Замена радиатора охлаждения",
+  "price_thermostat": "Замена термостата",
+  "cat_suspension_repair": "Ремонт подвески и ходовой части",
+  "price_shock_absorbers": "Замена амортизаторов / стоек (шт.)",
+  "price_suspension_arm": "Замена рычага подвески (шт.)",
+  "price_steering_rack": "Замена рулевой рейки",
+  "price_steering_rod": "Замена рулевой тяги и наконечника (сторона)",
+  "price_ball_joint": "Замена шаровой опоры",
+  "price_bushing_press": "Перепрессовка сайлентблока (на снятом)",
+  "price_wheel_bearing": "Замена ступичного подшипника / ступицы",
+  "price_cv_joint": "Замена ШРУСа (гранаты)",
+  "price_drive_shaft": "Снятие/установка приводного вала",
+  "price_driveshaft_prop": "Снятие/установка карданного вала",
+  "price_alignment": "Развал-схождение",
+  "cat_transmission_repair": "Ремонт трансмиссии",
+  "price_clutch_mt": "Замена сцепления МКПП",
+  "price_transmission_swap": "Снятие/установка АКПП/CVT",
+  "cat_brake_system": "Ремонт тормозной системы",
+  "price_brake_pads_only": "Замена тормозных колодок (без дисков)",
+  "price_caliper_guide_cleaning": "Чистка направляющих (при замене)",
+  "price_caliper_rebuild": "Переборка суппорта (1 поршень)",
+  "price_handbrake_shoes": "Замена колодок ручника (барабанных)",
+  "price_value_per_wheel": "/колесо",
+  "cat_electric": "Электрика и электроника",
+  "price_battery_swap": "Замена АКБ",
+  "price_alternator_starter": "Замена генератора / стартера",
+  "price_sensors": "Замена датчиков",
+  "price_bulbs": "Замена лампочек",
+  "price_wiring_repair": "Ремонт электропроводки",
+  "price_extra_equipment": "Установка доп. оборудования",
+  "price_value_per_hour": "/час",
+  "cat_body_interior": "Кузов, салон и прочее",
+  "price_windshield": "Замена лобового стекла",
+  "price_heater_core": "Замена радиатора печки",
+  "price_bumper": "Снятие/установка бампера",
+  "price_cabin_leak": "Поиск и устранение течи в салоне",
+  "price_interior_assembly": "Разбор/сборка элементов салона",
+  "price_metal_works": "Слесарные и сварочные работы",
+  "price_value_negotiable": "Договорная",
+  "price_value_from": "от"
 }
